<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EJ ActionBar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="menu_buscar">Buscar</string>
    <string name="menu_cortar">Cortar</string>
    <string name="menu_copiar">Copiar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_compartir">Compartir</string>
    
    <string name="menu_actualizar">Actualizar</string>
    
    <string name="productos">Productos</string>
    <string name="clientes">Clientes</string>
    <string name="pedidos">Pedidos</string>

</resources>
